Inserção do EstoqueActivity e seus derivados. Seu acesso é dado clicando Floating Action Button da Main Activity (ou Botão de Email Rosa da Main). Estoque ainda com BUG de não inserir no banco e na ListView

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,7 @@
     <string name="app_label">Search</string>
     <string name="search_hint">Search Me</string>
     <string name="search">Search</string>
+    <string name="title_activity_main_estoque">MainEstoqueActivity</string>
+    <string name="title_activity_cadastro_ingrediente">CadastroIngrediente</string>
+    <string name="title_activity_estoque">EstoqueActivity</string>
 </resources>
