Atualização com fragments (em adicionar receitas) porém sem adição dinâmica de ingredientes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,8 +4,7 @@
     <string name="title_activity_auth">AuthActivity</string>
 
 
-
-<!-- Begin Google Stuff HERE -->
+    <!-- Begin Google Stuff HERE -->
     <string name="title_text">Login pelo Google</string>
 
     <!-- Sign-in status messages -->
@@ -37,7 +36,6 @@
     <string name="contacts_permission_rationale">Contacts access is needed in order to retrieve your email address.</string>
 
 
-
     <!-- Server Client ID.  This should be a valid Web OAuth 2.0 Client ID obtained
          from https://console.developers.google.com/ -->
     <string name="server_client_id">348999571211-prd1171f5hv6eeb7917484bo35t8hca2.apps.googleusercontent.com</string>
@@ -46,5 +44,8 @@
     <string name="title_activity_set_time">setTimeActivity</string>
     <!-- End Google Stuff HERE -->
     <string name="title_activity_estoque">Estoque</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
